--- a/src/app/components/hierarchy-tree/hierarchyTree.component.html
+++ b/src/app/components/hierarchy-tree/hierarchyTree.component.html
@@ -1,54 +1,50 @@
-<div class="tree-container">
-    <tb-breadcrumbs 
-        [ctx]="ctx" 
-        [breadcrumbs]="breadcrumbs"
-        (clickOnBreadcrumb)="breadcrumbCallback($event)"></tb-breadcrumbs>
-    <mat-tree
-        #tree
-        [dataSource]="dataSource"
-        [treeControl]="treeControl"
-        class="customers-groups-tree"
-    >
-        <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-            <button 
-                [disabled]="!isLoading$"
-                mat-icon-button
-                (click)="selectCustomerAndUpdateTree(node)"
-                [attr.aria-label]='"Load " + node.name'>
-                <mat-icon    
-                    class="mat-icon-rtl-mirror node-icon">
-                    play_arrow
-                </mat-icon> 
-            </button>
-            {{ node.name }}
-        </mat-tree-node>
-        <mat-tree-node
-            *matTreeNodeDef="let node; when: hasChild"
-            matTreeNodePadding
-            [cdkTreeNodeTypeaheadLabel]="node.name"
+
+<mat-tree
+    #tree
+    [dataSource]="dataSource"
+    [childrenAccessor]="childrenAccessor"
+    class="customers-groups-tree"
+>
+    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+        <button
+            [disabled]="!isLoading$"
+            mat-icon-button
+            (click)="childrenIconClick(node)"
+            [attr.aria-label]='"Load " + node.name'
         >
-            <button 
-                mat-icon-button
-                matTreeNodeToggle
-                [attr.aria-label]='"Toggle " + node.name'>
-                <mat-icon 
-                    class="mat-icon-rtl-mirror node-icon">
-                    {{treeControl.isExpanded(node) 
-                        ? "expand_more" 
-                        : "chevron_right"}}
-                </mat-icon>
-            </button>
-            <mat-chip
-                [disabled]="node.disabled"
-                [class]='"sz-mat-chip " + node.name + "-group"'>
-                {{ node.name }}
-            </mat-chip>
-            <div
-                [class.example-tree-invisible]="!treeControl.isExpanded(node)"
-                role="group"
-            >
-                <ng-container matTreeNodeOutlet></ng-container>
-            </div>
-        </mat-tree-node>
-    </mat-tree>
-</div>
+            <mat-icon class="mat-icon-rtl-mirror node-icon">
+                store
+            </mat-icon>
+        </button>
+        {{ node.name }}
+    </mat-tree-node>
+    <mat-tree-node
+        *matTreeNodeDef="let node; when: hasChild"
+        matTreeNodePadding
+        [cdkTreeNodeTypeaheadLabel]="node.name"
+    >
+        <button
+            mat-icon-button
+            matTreeNodeToggle
+            [attr.aria-label]='"Toggle " + node.name'
+        >
+            <mat-icon class="mat-icon-rtl-mirror node-icon">
+                {{
+                    tree.isExpanded(node) ? "expand_more" : "chevron_right"
+                }}
+            </mat-icon>
+        </button>
+        <mat-chip
+            [disabled]="node.disabled"
+            [class]='"sz-mat-chip " + node.name + "-group"'
+        >
+            {{ node.name }}
+        </mat-chip>
+        <!-- <div
+            [class.example-tree-invisible]="!tree.isExpanded(node)"
+            role="group"
+        >
+            <ng-container matTreeNodeOutlet></ng-container>
+        </div> -->
+    </mat-tree-node>
+</mat-tree>
