--- a/src/app/widgets/create-customer-form/createCustomerForm.component.html
+++ b/src/app/widgets/create-customer-form/createCustomerForm.component.html
@@ -22,97 +22,11 @@
     <div style="height: 4px" *ngIf="!(isLoading$ | async)"></div>
     <div mat-dialog-content fxLayout="column">
         <tb-sz-form-field
+            *ngFor="let field of fields;"
             [formGroup]="createCustomerFormGroup"
-            [fields]="fields">
+            [control]="createCustomerFormGroup.controls[field.name]"
+            [field]="field">
         </tb-sz-form-field>
-        
-        <mat-form-field
-            fxFlex
-            class="mat-block"
-            *ngFor="let field of fields">
-            <mat-label
-                *ngIf="'label' in field">
-                {{ field.label }}
-            </mat-label>
-            <mat-hint
-                *ngIf="'description' in field"
-                hintlabel="true">
-                {{ field.description }}
-            </mat-hint>
-            <input
-                matInput
-                [formControlName]="field.name"
-                *ngIf="((!field.input && (field.type === 'string' || field.type === 'integer' || field.type === 'double')) || field.input == 'input')"
-                required
-                [value]="createCustomerFormGroup.get(field.name)?.value"
-            />
-            <textarea
-                matInput
-                [formControlName]="field.name"
-                *ngIf="(field.input && field.input === 'textarea')"
-                required
-                [value]="createCustomerFormGroup.get(field.name)?.value"
-            ></textarea>
-            <mat-select
-                [formControlName]="field.name"
-                *ngIf="(field.type === 'enum')"
-                [required]="field.required">
-                <mat-option
-                    *ngFor="let option of field.enumOptions"
-                    [value]="option">
-                    {{ option }}
-                </mat-option>
-            </mat-select>
-            <mat-select
-                [formControlName]="field.name"
-                *ngIf="(field.input === 'select')"
-                [required]="field.required">
-                <mat-option
-                    *ngFor="let option of field.selectOptions"
-                    [value]="option.value"
-                >
-                    {{ option.label }}
-                </mat-option>
-            </mat-select>
-            <mat-select
-                [formControlName]="field.name"
-                *ngIf="(field.type === 'json' && field.input === 'multi-select')"
-                [required]="field.required"
-                multiple>
-                <mat-option
-                    *ngFor="let option of field.selectOptions"
-                    [value]="option.value">
-                    {{ option.label }}
-                </mat-option>
-            </mat-select>
-            <mat-chip-grid
-                #chipGrid
-                [required]="field.required"
-                *ngIf="(field.type === 'json' && field.input === 'chips')">
-                <mat-chip-row
-                    *ngFor="let chip of createCustomerFormGroup.get(field.name)?.value"
-                    (removed)="removeChip(chip, 'provisioningFields', field.name)"
-                    [editable]="true"
-                    (edited)="editChip($event, chip, 'provisioningFields', field.name)">
-                    {{ chip }}
-                    <button matChipRemove>
-                        <mat-icon>cancel</mat-icon>
-                    </button>
-                </mat-chip-row>
-                <input
-                    matInput
-                    placeholder="New item..."
-                    [matChipInputFor]="chipGrid"
-                    [matChipInputSeparatorKeyCodes]="[ENTER, COMMA]"
-                    [matChipInputAddOnBlur]="true"
-                    (matChipInputTokenEnd)="addChip($event, 'provisioningFields', field.name)"
-                />
-            </mat-chip-grid>
-            <mat-error
-                *ngIf="createCustomerFormGroup.get(field.name).hasError('required')"            >
-                A value for {{ field.label }} is required.
-            </mat-error>
-        </mat-form-field>
         <tb-contact
             [parentForm]="createCustomerFormGroup"
             [isEdit]="true">
