:hammer: Refactors user manager and gets navbar to update store

--- a/src/app/components/sz-navbar/szNavbar.component.html
+++ b/src/app/components/sz-navbar/szNavbar.component.html
@@ -29,6 +29,11 @@
             Insights
         </span>
     </button>
+    <ng-container *ngIf="userState$ | async as state">
+        <span *ngIf="state.user">
+            {{ state.user.email.split("@")[0] }}
+        </span>
+    </ng-container>
     <span class="example-spacer"></span>
     <span *ngIf="(user$ | async)">{{ userManager.scope }}</span>
     <button
