:heavy_check_mark: Completes main-navbar component for part 1 of test
- :eyes: pending 2nd part, building card and subscribing to entity, and then passing data to widget that maps cards.

- :eyes: another way to do a fast test though could be to have a custom widget show conditional content based on store variable, and state params variable.

--- a/src/app/scss/style.scss
+++ b/src/app/scss/style.scss
@@ -2,4 +2,11 @@
 
 .tb-widget.widget-type-system-customWidget {
   //Global styles are added here. Using to isolate widget extension styles
+  --senzary-purple: #3d3b83;
+  --senzary-pink: #ce489a;
+}
+
+* {
+  --senzary-purple: #3d3b83;
+  --senzary-pink: #ce489a;
 }
